Integration du plan final avec references et annexes

--- a/Rapport/includes/titlepage.tex
+++ b/Rapport/includes/titlepage.tex
@@ -11,7 +11,7 @@
 
 \includegraphics[scale=0.6]{Graphics/logo.png}\\[1.5cm]
 
-\textsc{\Large Projet Electif (technique)}\\[0.5cm] % Major heading such as course name
+\textsc{\Large Projet Electif}\\[0.5cm] % Major heading such as course name
 \textsc{\large Projet technique}\\[0.5cm] % Minor heading such as course title
 
 {\normalsize \today}\\[1.5cm]
@@ -39,7 +39,7 @@
 \textsc{Biton} Guillaume (guillaume.biton@ipsa.fr)\\
 \textsc{Guichard} Marc-Antoine \small(marc-antoine.guichard@ipsa.fr)\\
 \textsc{Lhermite} Camille \small(camille.lhermite@ipsa.fr)\\
-\textsc{Monnot} Maxime \small(marc-antoine.guichard@ipsa.fr)\\[1cm]
+\textsc{Monnot} Maxime \small(maxime.monnot@ipsa.fr)\\[1cm]
 
  
 %----------------------------------------------------------------------------------------
