--- a/Rapport/includes/packages.tex
+++ b/Rapport/includes/packages.tex
@@ -32,5 +32,5 @@ frame=single}
 \usepackage{epstopdf}
 \epstopdfsetup{outdir=./}
 \usepackage{tikz}
-\usetikzlibrary{shadows,arrows}
-\input{includes/diagramsHeader}
+\usepackage{includes/tikz-uml}
+\usetikzlibrary{positioning,chains,fit,shapes,calc}
