Nouveau logo IPSA, nouvelles illustration et debut de solution de suivi de ligne

--- a/Rapport/includes/packages.tex
+++ b/Rapport/includes/packages.tex
@@ -10,6 +10,7 @@
 \usepackage{arev}									%Police
 \renewcommand{\baselinestretch}{1.15} 				%Interligne
 \setlength\parindent{4pt}							%Alineas
+\usepackage[skip=5pt,font=footnotesize]{caption}
 
 \usepackage{xcolor}									%Couleurs perso
 \definecolor{grisPerso}{rgb}{0.9,0.9,0.9}
