--- a/Rapport/includes/titlepage.tex
+++ b/Rapport/includes/titlepage.tex
@@ -9,7 +9,7 @@
 %   HEADING SECTIONS
 %----------------------------------------------------------------------------------------
 
-\includegraphics[scale=0.6]{Graphics/logo.png}\\[1.5cm]
+\includegraphics[scale=0.6]{Graphics/LOGO-IPSA.pdf}\\[1.5cm]
 
 \textsc{\Large Projet Electif}\\[0.5cm] % Major heading such as course name
 \textsc{\large Projet technique}\\[0.5cm] % Minor heading such as course title
