--- a/Rapport/rapport.tex
+++ b/Rapport/rapport.tex
@@ -3,7 +3,8 @@
 \documentclass[11pt]{article}
 
 \input{includes/packages}
-\input{includes/functions}
+\include{includes/functions}
+
 
 \begin{document}
 
