Corrections et rédaction sur la partie 3

--- a/Rapport/LaTeX/includes/bibliography.bib
+++ b/Rapport/LaTeX/includes/bibliography.bib
@@ -72,4 +72,18 @@
        year={2016},
        note={}},
 
+@MANUAL{bib12,
+       title={eQEP},
+       organization={Texas Instrument},
+       year={2006},
+       note={\url{http://www.ti.com/lit/an/spraah1/spraah1.pdf}}},
+
+@MISC{bib13,
+       author={T. DICOLA},
+       title={Embedded Linux Board Comparison - Power Usage},
+       howpublished={{\url{https://learn.adafruit.com/embedded-linux-board-comparison/power-usage}}},
+       booktitle={Adafruit Learn},
+       year={2015},
+       note={}},
+
 
