--- a/Rapport/LaTeX/rapport.tex
+++ b/Rapport/LaTeX/rapport.tex
@@ -33,7 +33,7 @@
 
 	Ce dossier comprend de nombreuses références dynamiques, et pour un confort de lecture optimal, nous vous conseillons d'en lire la version numérique afin de pouvoir bénéficier des liens cliquables.\\
 
-	Exception faite des modèles mécaniques en CAO 3D effectués sous Catia\textregistered l'ensemble des réalisations ici présentées utilisent des outils Open-Source. Le présent dossier est rédigé en \href{https://www.latex-project.org/}{\LaTeX}, les illustrations ont été réalisées en dessin-vectoriel sous \href{https://inkscape.org/fr/}{Inkscape} ou en matriciel sous \href{https://www.gimp.org/}{GIMP} et les schémas et circuits électroniques sous \href{http://kicad-pcb.org/}{KiCad}.
+	Exception faite des modèles mécaniques en CAO 3D effectués sous Catia\textsuperscript{\textregistered}, l'ensemble des réalisations ici présentées utilisent des outils Open-Source : le présent dossier est rédigé en \href{https://www.latex-project.org/}{\LaTeX}, les illustrations ont été réalisées en dessin-vectoriel sous \href{https://inkscape.org/fr/}{Inkscape} ou en matriciel sous \href{https://www.gimp.org/}{GIMP} et les schémas et circuits électroniques sous \href{http://kicad-pcb.org/}{KiCad}.
 
 \newpage
 
