Corrections du rapport + Carte Mère

--- a/Rapport/LaTeX/rapport.tex
+++ b/Rapport/LaTeX/rapport.tex
@@ -18,7 +18,7 @@
 
 \section*{Remerciements}
 
-	Nous remercions Mesdames Assia Belbachir et Sorore Benabid, ensignants chercheurs au sein du laboratoire Mécatronique, Signal et Systèmes de l'IPSA pour nous avoir soumis cette idée de projet, pour nous avoir accordé leur confiance quant à sa réalisation potentielle et pour leur soutien dans le cadre de ce projet.
+	Nous remercions Mesdames Assia Belbachir et Sorore Benabid, ensignants chercheurs au sein du laboratoire Mécatronique, Signal et Systèmes de l'IPSA pour nous avoir soumis cette idée, pour nous avoir accordé leur confiance quant à sa réalisation potentielle et pour leur soutien dans le cadre de ce projet.
 
 	\vspace{80pt}
 
@@ -27,7 +27,7 @@
 
 	Le travail de recherche ici présenté est sous la responsabilité des auteurs cités en première de couverture et sous la propriété de l'IPSA. Merci de nous contacter au moyen des adresses fournies pour nous signaler tout problème, ou pour toute demande liée à l'utilisation du contenu.\\
 
-	L'ensemble des aréviations utilisées dans ces pages sont explicitées en page \pageref{nomenclature} (nomenclature).\\
+	L'ensemble des abréviations utilisées dans ces pages sont explicitées en page \pageref{nomenclature} (nomenclature).\\
 
 	Les numéros entre crochets pouvant apparaitre au sein de paragraphes sont des références bibliographiques et vous renvoient à la page \pageref{bibliographie} (bibliographie).\\
 
