--- a/Rapport/LaTeX/includes/bibliography.bib
+++ b/Rapport/LaTeX/includes/bibliography.bib
@@ -86,4 +86,25 @@
        year={2015},
        note={}},
 
+@MISC{bib14,
+       author={J. COOPER},
+       title={Setting up IO Python Library on BeagleBone Black},
+       howpublished={{\url{https://learn.adafruit.com/setting-up-io-python-library-on-beaglebone-black/gpio}}},
+       booktitle={Adafruit Learn},
+       year={2015},
+       note={}},
 
+@MISC{bib15,
+       author={J. COOPER},
+       title={Adafruit Beaglebone IO Python - README},
+       howpublished={\url{https://github.com/adafruit/adafruit-beaglebone-io-python}},
+       year={2016},
+       note={}},
+
+@MISC{bib16,
+       author={D. MOLLOY},
+       title={Chapter 6: Interfacing to the BeagleBone Input/Outputs Chapter 6: Interfacing to the BeagleBone Input/Outputs},
+       howpublished={{\url{http://exploringbeaglebone.com/chapter6/#The_BealeBone_GPIOs_8211_Using_Device_Tree_Overlays}}},
+       booktitle={Exploring BeagleBone},
+       year={2015},
+       note={}}
