Intégration ensemble propulsif ajouté

--- a/Rapport/LaTeX/includes/bibliography.bib
+++ b/Rapport/LaTeX/includes/bibliography.bib
@@ -107,4 +107,10 @@
        howpublished={{\url{http://exploringbeaglebone.com/chapter6/#The_BealeBone_GPIOs_8211_Using_Device_Tree_Overlays}}},
        booktitle={Exploring BeagleBone},
        year={2015},
-       note={}}
+       note={}},
+
+@MANUAL{bib17,
+       title={L293D},
+       organization={Texas Instrument},
+       year={2016},
+       note={\url{http://www.ti.com/lit/ds/symlink/l293.pdf}}}
