--- a/Rapport/LaTeX/includes/bibliography.bib
+++ b/Rapport/LaTeX/includes/bibliography.bib
@@ -113,4 +113,14 @@
        title={L293D},
        organization={Texas Instrument},
        year={2016},
-       note={\url{http://www.ti.com/lit/ds/symlink/l293.pdf}}}
+       note={\url{http://www.ti.com/lit/ds/symlink/l293.pdf}}},
+
+@MISC{bib18,
+       author={Fergus},
+       title={Popular Logitech Webcam FOVs},
+       howpublished={{\url{http://fer.gy/2012/05/11/popular-logitech-webcam-fovs/}}},
+       booktitle={www.fer.gy},
+       year={2012},
+       note={}},
+
+
