Redaction rapport - Partie 3

--- a/Rapport/LaTeX/includes/packages.tex
+++ b/Rapport/LaTeX/includes/packages.tex
@@ -36,3 +36,5 @@ frame=single}
 \usepackage{tikz}
 \usepackage{includes/tikz-uml}
 \usetikzlibrary{positioning,chains,fit,shapes,calc}
+
+\usepackage{subcaption}
