Ajout partie couts

--- a/Rapport/LaTeX/rapport.tex
+++ b/Rapport/LaTeX/rapport.tex
@@ -65,10 +65,13 @@
 
 	\input{chapitres/5_coutFaisabilite}
 
+\section{Suivi de projet}
+
+	\input{chapitres/6_suiviProjet}
 \newpage
 \section{Conclusion et aperçu des évolutions possibles}
 	
-	\input{chapitres/6_conclusion}
+	\input{chapitres/7_conclusion}
 
 \setcounter{secnumdepth}{0}
 \renewcommand{\thesubsection}{\Alph{subsection}}
@@ -78,7 +81,10 @@
 
 	\input{chapitres/Annexes/carteReflecteurs}
 	\input{chapitres/Annexes/carteMere}
-
+	\newpage
+	\input{chapitres/Annexes/devis}
+	\input{chapitres/Annexes/gantt}
+	\input{chapitres/Annexes/PERT}
 \setcounter{secnumdepth}{0}
 \newpage
 \section{Références}
