Redaction rapport - Reconnaissance d'image

--- a/Rapport/LaTeX/includes/bibliography.bib
+++ b/Rapport/LaTeX/includes/bibliography.bib
@@ -123,4 +123,24 @@
        year={2012},
        note={}},
 
+@MISC{bib19,
+        author={},
+        title={interrupteur ILS 1 T},
+        howpublished={{\url{http://www.gotronic.fr/art-interrupteur-ils-1-t-19990.htm}}},
+        booktitle={Go Tronic},
+        year={},
+        note={}},
 
+@MISC{bib20,
+        author={},
+        title={OpenCV User Guide},
+        howpublished={{\url{http://docs.opencv.org/2.4/doc/user_guide/user_guide.html}}},
+        booktitle={Documentation OpenCV},
+        year={},
+        note={}},
+
+@MANUAL{bib21,
+       title={LM7805},
+       organization={Fairchild},
+       year={2014},
+       note={},
