Ajout de la partie carte circuit

--- a/Rapport/LaTeX/includes/bibliography.bib
+++ b/Rapport/LaTeX/includes/bibliography.bib
@@ -124,23 +124,43 @@
        note={}},
 
 @MISC{bib19,
-        author={},
-        title={interrupteur ILS 1 T},
-        howpublished={{\url{http://www.gotronic.fr/art-interrupteur-ils-1-t-19990.htm}}},
-        booktitle={Go Tronic},
-        year={},
-        note={}},
+       author={},
+       title={interrupteur ILS 1 T},
+       howpublished={{\url{http://www.gotronic.fr/art-interrupteur-ils-1-t-19990.htm}}},
+       booktitle={Go Tronic},
+       year={},
+       note={}},
 
 @MISC{bib20,
-        author={},
-        title={OpenCV User Guide},
-        howpublished={{\url{http://docs.opencv.org/2.4/doc/user_guide/user_guide.html}}},
-        booktitle={Documentation OpenCV},
-        year={},
-        note={}},
+       author={},
+       title={OpenCV User Guide},
+       howpublished={{\url{http://docs.opencv.org/2.4/doc/user_guide/user_guide.html}}},
+       booktitle={Documentation OpenCV},
+       year={},
+       note={}},
 
 @MANUAL{bib21,
        title={LM7805},
        organization={Fairchild},
        year={2014},
-       note={},
+       note={}},
+
+@MANUAL{bib22,
+       title={Basys 2™ FPGA Board Reference Manual},
+       organization={DIGILENT},
+       year={2016},
+       note={}},
+
+@MANUAL{bib23,
+       title={Digilent Pmod™ Interface Specification},
+       organization={DIGILENT},
+       year={2011},
+       note={\url{https://www.digilentinc.com/Pmods/Digilent-Pmod_%20Interface_Specification.pdf}}},
+
+@MANUAL{bib24,
+       title={74HC - 74HCT},
+       organization={NXP},
+       year={2014},
+       note={\url{https://www.nxp.com/documents/data_sheet/74HC_HCT04.pdf}}},
+
+
