--- a/Rapport/LaTeX/rapport.tex
+++ b/Rapport/LaTeX/rapport.tex
@@ -93,7 +93,7 @@
 		\printnomenclature
 
 	\newpage
-	\nocite{bib11}
+	\nocite{bib11,bib1}
 	\subsection{Bibliographie} \label{bibliographie}
 		\begingroup
 		\renewcommand{\section}[2]{}%
