Petites rectifications demandees par mon loulou

--- a/Rapport/LaTeX/includes/bibliography.bib
+++ b/Rapport/LaTeX/includes/bibliography.bib
@@ -164,3 +164,11 @@
        note={\url{https://www.nxp.com/documents/data_sheet/74HC_HCT04.pdf}}},
 
 
+@MISC{bib25,
+       author={},
+       title={Step-Down Voltage Regulators},
+       howpublished={{\url{https://www.pololu.com/category/131/step-down-voltage-regulators}}},
+       booktitle={Pololu},
+       year={},
+       note={}},
+
