--- a/Rapport/LaTeX/rapport.tex
+++ b/Rapport/LaTeX/rapport.tex
@@ -78,7 +78,7 @@
 
 \newpage
 \sectionWoNum{Annexes}
-
+	\input{chapitres/Annexes/carteCircuit}
 	\input{chapitres/Annexes/carteReflecteurs}
 	\input{chapitres/Annexes/carteMere}
 	\newpage
